fixed artist page on mobile

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -489,7 +489,14 @@ a
   white-space: pre-wrap 
   font-size: 24px
       
-@media screen and ( max-width: 767px )
+@media screen and ( max-width: 768px )
+  .section.artist-post
+    padding-left: 0
+    padding-right: 0
+  .artist-post-sidebar
+    border-right: none !important
+    border-bottom: $border-1;
+    margin-bottom: 2em
   .exhibition-page .exhibition-page-objkt
     display: block;
     text-align: center;
